[package]
name = "swipy"
version = "0.1.0"
authors = ["Maxence Frenette <maxence.frenette@gmail.com>"]

[workspace]
members = [
    "./",
    "engine",
]

[dependencies]
clap = "2.32.0"
indicatif = "0.9.0"
statistical = "0.1.1"
swipy-engine = { version = "0.1.0", path = "engine" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "move_gen"
harness = false
