[package]
name = "swipy-cli"
version = "0.1.0"
authors = ["Maxence Frenette <maxence.frenette@gmail.com>"]

[dependencies]
clap = "2.32.0"
indicatif = "0.9.0"
serde_json = "1.0.33"
statistical = "0.1.1"
strum = "0.12.0"
strum_macros = "0.12.0"
swipy-engine = { version = "0.1.0", path = "../engine" }
