[package]
name = "swipy-engine"
version = "0.1.0"
authors = ["Maxence Frenette <maxence.frenette@gmail.com>"]
edition = "2018"

[dependencies]
fnv = "1.0.6"
lazy_static = "1.0.2"
rand = "0.6"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
statistical = "0.1.1"

[dev-dependencies]
criterion = "0.2"
approx = "0.3.0"

[[bench]]
name = "move_gen"
harness = false
